--- a/index.html
+++ b/index.html
@@ -117,6 +117,44 @@
                 </div>
             </div>
         </div>
+
+        <!-- container 2 -->
+        <div class="container">
+            <div class="row">
+                <div class="col-12 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-1 box"></div>
+                <div class="col-11 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-2 box"></div>
+                <div class="col-10 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-3 box"></div>
+                <div class="col-9 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-4 box"></div>
+                <div class="col-8 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-5 box"></div>
+                <div class="col-7 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-6 box"></div>
+                <div class="col-6 box"></div>
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
