--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
         <!-- container 2 -->
         <div class="container">
+
             <div class="row">
                 <div class="col-12 box"></div>
             </div>
@@ -152,6 +153,66 @@
             <div class="row">
                 <div class="col-6 box"></div>
                 <div class="col-6 box"></div>
+            </div>
+
+        </div>
+
+        <!-- container 3 -->
+        <div class="container">
+
+            <div class="row">
+                <div class="col-offset-11"></div>
+                <div class="col-1 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-10"></div>
+                <div class="col-2 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-9"></div>
+                <div class="col-3 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-8"></div>
+                <div class="col-4 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-7"></div>
+                <div class="col-5 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-6"></div>
+                <div class="col-6 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-5"></div>
+                <div class="col-7 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-4"></div>
+                <div class="col-8 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-3"></div>
+                <div class="col-9 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-2"></div>
+                <div class="col-10 box"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-offset-1"></div>
+                <div class="col-11 box"></div>
             </div>
 
         </div>
